frontend/test/should_pass/unique_model.gm
node class N
{
	s : string;
}

edge class E
{
	s : string;
}

node edge unique;
