frontend/test/should_fail/no_transient_object_in_node.gm
transient class TransObj
{
}

node class N
{
	tobj:TransObj;
}
